--- a/multimodal/style.css
+++ b/multimodal/style.css
@@ -5,6 +5,7 @@ body {
     font-weight: 300;
     text-align: center;
     color: #FFF;
+    background-color: #000;
     text-shadow: 1px 1px #000;
 }
 
